# StockXpert_Web

./: .gitignore  DEPLOYMENT.md  README.md  render.yaml
app/: __init__.py
backend/: .env.example  PLAN.md  README.md  pyproject.toml  requirements.txt
backend/app/: deps.py  main.py
backend/app/core/: artifacts.py  cache.py  errors.py  logging.py  settings.py
backend/app/engine/: checkpoint_loader.py  config.py  manifest.py  pipeline.py  predictor.py  ranking.py  symbol_registry.py
backend/app/engine/calibration/: calibration.py
backend/app/engine/data/: csv_sentiment.py  market_data.py  sentiment.py  trading_calendar.py
backend/app/engine/features/: builder.py  event_calendar.py  fibonacci.py  indicators.py
backend/app/engine/models/: encoders.py  fusion.py  fusion_layers.py  sentiment_encoder.py  stockxpert.py  time2vec.py
backend/app/engine/scaling/: scaling.py
backend/app/jobs/: build_recommendation_snapshot.py
backend/app/routers/: admin.py  dashboard.py  health.py  metadata.py  recommendations.py  stocks.py
backend/app/schemas/: __init__.py  api.py
backend/app/services/: __init__.py  backend_service.py  recommendation_snapshot.py  snapshot_scheduler.py  snapshot_storage.py
backend/artifacts/: model_manifest.json
backend/artifacts/default_bundle/: config.yaml
backend/artifacts/default_bundle/artifacts/: calibrator.pkl  scalers.pkl
frontend/: .env.example  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/editorial/: layout.tsx  (+1 more)
frontend/types/: api.ts
plans/: frontend-architecture.md
(+36 files in other folders)
